deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-disease-api
  namespace: heart-disease
  labels:
    app.kubernetes.io/name: heart-disease-api
    app.kubernetes.io/part-of: heart-disease-mlops
spec:
  type: LoadBalancer

  selector:
    app.kubernetes.io/name: heart-disease-api

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
