deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heart-disease-api
  namespace: heart-disease
  labels:
    app.kubernetes.io/name: heart-disease-api
    app.kubernetes.io/part-of: heart-disease-mlops
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx

  rules:
    - host: heart-disease.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heart-disease-api
                port:
                  number: 80
